// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests basic 1`] = `
<div>
  <div
    className="row"
  >
    <button
      aria-label="Decrement value"
      className="button"
      onClick={[Function]}
    >
      -
    </button>
    <span
      className="value"
    >
      0
    </span>
    <button
      aria-label="Increment value"
      className="button"
      onClick={[Function]}
    >
      +
    </button>
  </div>
  <div
    className="row"
  >
    <input
      aria-label="Set increment amount"
      className="textbox"
      onChange={[Function]}
      value="2"
    />
    <button
      className="button"
      onClick={[Function]}
    >
      Add Amount
    </button>
    <button
      className="button"
      onClick={[Function]}
    >
      Add If Odd
    </button>
    <button
      className="asyncButton"
      disabled={false}
      onClick={[Function]}
    >
      Fetch
    </button>
    <button
      className="asyncButton"
      disabled={false}
      onClick={[Function]}
    >
      Post
    </button>
  </div>
</div>
`;

exports[`Shallow Snapshot Tests loading 1`] = `
<div>
  <div
    className="row"
  >
    <button
      aria-label="Decrement value"
      className="button"
      onClick={[Function]}
    >
      -
    </button>
    <span
      className="value"
    >
      0
    </span>
    <button
      aria-label="Increment value"
      className="button"
      onClick={[Function]}
    >
      +
    </button>
  </div>
  <div
    className="row"
  >
    <input
      aria-label="Set increment amount"
      className="textbox"
      onChange={[Function]}
      value="2"
    />
    <button
      className="button"
      onClick={[Function]}
    >
      Add Amount
    </button>
    <button
      className="button"
      onClick={[Function]}
    >
      Add If Odd
    </button>
    <button
      className="asyncButton"
      disabled={true}
      onClick={[Function]}
    >
      Fetch
    </button>
    <button
      className="asyncButton"
      disabled={true}
      onClick={[Function]}
    >
      Post
    </button>
  </div>
</div>
`;

exports[`Shallow Snapshot Tests with error 1`] = `
<div>
  <div>
    error
  </div>
  <div
    className="row"
  >
    <button
      aria-label="Decrement value"
      className="button"
      onClick={[Function]}
    >
      -
    </button>
    <span
      className="value"
    >
      0
    </span>
    <button
      aria-label="Increment value"
      className="button"
      onClick={[Function]}
    >
      +
    </button>
  </div>
  <div
    className="row"
  >
    <input
      aria-label="Set increment amount"
      className="textbox"
      onChange={[Function]}
      value="2"
    />
    <button
      className="button"
      onClick={[Function]}
    >
      Add Amount
    </button>
    <button
      className="button"
      onClick={[Function]}
    >
      Add If Odd
    </button>
    <button
      className="asyncButton"
      disabled={false}
      onClick={[Function]}
    >
      Fetch
    </button>
    <button
      className="asyncButton"
      disabled={false}
      onClick={[Function]}
    >
      Post
    </button>
  </div>
</div>
`;
